# LectureTranscription

./: .gitignore  README.md  pyproject.toml  transcription.py
src/: asr.py  config.py  data_models.py  diarisation.py  event_tagging.py  main.py  postprocessing.py  preprocessing.py
